plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gyu'
version = '0.0.1-SNAPSHOT'
description = 'eng-du'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//스프링 DATA JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//스프링 security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//스프링 validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//스프링 web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//롬복
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//mysql 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'

	//Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//프로메테우스
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	//AWS SQS
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.3.0'
	implementation 'software.amazon.awssdk:sqs:2.29.52'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
